<resources>
    <string name="app_name">IfttUtilities</string>
    <string name="title_activity_uber_home">Uber</string>
    <string name="tab_text_1">Util</string>
    <string name="tab_text_2">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="uber_work_to_home">Work To Home</string>
    <string name="uber_home_to_work">Home To Work</string>
    <string name="pin_shortcut_work_to_home">Pin shortcut Work To Home</string>
    <string name="pin_shortcut_home_to_work">Pin Shortcut Home To Work</string>
    <string name="get_uber_products">Get Uber Products</string>
    <string name="take_me_home">Take me Home</string>
    <string name="pin_shortcut_to_home">Pin shortcut To Home</string>
    <string name="feature_not_supported">Feature not supported</string>
    <string name="mi_band_connection_condition">Your Mi band should already be paired with this device and should have name starting with Mi band</string>
</resources>
